# Python_DataEngineer

./: README.md  desafio_01.py  exemplo01.py
modulo01/: exemplo02.py  exemplo03.py
modulo02/: desafio_01.py  desafio_02.py  exemplo00.py  exemplo01.py  exemplo02.py  exemplo03.py  exemplo04.py  exemplo05.py  exemplo06.py  exemplo_07.py  exemplo_08.py  exemplo_09.py  exemplo_10.py
modulo03/: desafio_01.py  exemplo00.py  exemplo01.py  main.py
modulo04/: desafio_01.py  exemplo.csv  exemplo00.py  exemplo01.py  exemplo02.py  exemplo03.py  exemplo04.py  exemplo05.py
modulo06/: .pre-commit-config.yaml  main.py  pyproject.toml
modulo06/helper/: azure.py
modulo07/: etl.py  exemplo01.py  main.py  pyproject.toml  vendas.csv
modulo08/: dados.parquet  etl.py  pipeline.py  pyproject.toml
modulo09/: exemplo00.py  logger_erros.py  pyproject.toml  timer.py  utils_log.py
