[tool.poetry]
name = "modulo06"
version = "0.1.0"
description = ""
authors = ["21seya <wallacenevesk9@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
taskipy = "^1.12.2"
black = "^24.4.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
format = """
isort main.py
black main.py
flake8 main.py
"""
