[tool.poetry]
name = "modulo08"
version = "0.1.0"
description = "\"Python basico\""
authors = ["21seya <wallacenevesk9@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
pandera = "^0.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
