[tool.poetry]
name = "modulo09"
version = "0.1.0"
description = "basico Python"
authors = ["21seya <wallacenevesk9@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
